# WindowAIRobot

./: .gitignore  CornerDetection.py  README.md  READMEHARDWARE.md  calib_parameters.npz  detect_dirt.py  main.py  package.xml  requirements.txt  robot_controller.py  save_video.py  setup.cfg  setup.py
config/: window_calibration.yaml
docs/: raspberry_pi5_ubuntu24_jazzy.md
launch/: arduino_imu.launch.py  dirt_target.launch.py  gazebo_sim.launch.py  real_robot.launch.py
meshes/: jagosipda.stl
tesT/: tesT.ino
tests/: test_adhesion_diagnostics.py  test_arduino_imu.py  test_arduino_motion.py  test_camera_and_ai_corner_detection.py  test_gazebo_camera_orientation.py  test_gazebo_dirt_cleaner.py  test_robot_controller_navigation.py  test_sim_bridge_motion.py  test_sim_dirt_detector.py  test_top_corner_detector.py  test_window_bim.py  test_window_cleaning_planner.py  test_window_frame_detector.py
urdf/: window_cleaner_robot.urdf
window_cleaner/: adhesion_diagnostics.py  arduino_imu.py  arduino_motion.py  arduino_sensor_bridge_node.py  calibration_io.py  camera_calibration.py  coordinate.py  detect_dirt.py  dirt_segmentation_node.py  dirt_target_node.py  gazebo_dirt_cleaner.py  gazebo_dirt_cleaner_node.py  image_input.py  image_snapshot_node.py  mjpeg_stream_node.py  paths.py  robot_controller_node.py  rpi_camera_node.py  sim_bridge_node.py  top_corner_detector.py  window_bim.py  window_cleaning_planner.py  window_cleaning_planner_node.py  window_frame_detector.py  window_geometry.py  window_map_initializer_node.py  window_segmentation_detector.py
(+3 files in other folders)
