<?xml version="1.0"?>
<package format="3">
  <name>window_cleaner</name>
  <version>0.1.0</version>
  <description>YOLOv8 dirt segmentation and coordinate conversion nodes for a window cleaning robot.</description>
  <maintainer email="student@example.com">capstone</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
